<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="psm">Dark SMS</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="noMessages">No messages</string>
    <string name="noContacts">No contacts</string>
    <string name="messages">Messages</string>
    <string name="newMessage">New message</string>
    <string name="newContactMenu">New contact</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="psms">psms</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
    <string name="search">Search</string>
    <string name="anonymous">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_continue">Do you want to continue?</string>
    <string name="deleteThread">Delete thread</string>
    <string name="deleteThreadWarning">Do you really want to delete this conversation thread?</string>
    <string name="deleteContact">Delete contact</string>
    <string name="deleteContactWarning">Do you really want to delete this contact?</string>
    <string name="viewConversation">View conversation</string>
    <string name="viewContact">View contact</string>
    <string name="newContact">Create contact</string>
    <string name="call">Call</string>
    <string name="changeSMSApplication">Change SMS Application</string>
    <string name="usePSMAsDefault">Use Dark SMS as default SMS application?</string>
    <string name="expired">Using of test version is expired, please install official version</string>
    <string name="protectThread">Protect thread</string>
    <string name="protectThreadWarning">Do you really want to protect this conversation thread?</string>
    <string name="unProtectThread">Clear thread protection</string>
    <string name="unProtectThreadWarning">Do you really want to clear protection of this conversation thread?</string>
    <string name="errorProtecting">Some errors might happen, not all messages protected</string>
    <string name="errorUnProtecting">Some errors might happen, not from all messages cleared protection</string>
    <string name="incompatible">Application is incompatible with this version of Android - sorry for inconvenience</string>
    <string name="pressToReadAbout">Press to processed</string>
    <string name="about">About Dark SMS</string>
    <string name="versionPSM">Dark SMS v.&#160;</string>
    <string name="descriptionPSM">Secure SMS messenger\n for Android devices</string>
    <string name="copyright">Copyright (c) 2014 Pavel Ivanov, Egor Sarnavsky  &amp; Olexander Laschenko"</string>
    <string name="emailAuthor">Email: ivanovpv@gmail.com</string>
    <string name="twitterAuthor">Twitter: http://twitter.com/pridurok</string>
    <string name="support">Support: ivanovpv@gmail.com</string>
    <string name="credits">Credits</string>
    <string name="creditsURL">file:///android_asset/credits.html</string>
    <string name="moreURL">&lt;a href=\'file:///android_asset/credits.html\'&gt;more...&lt;/a&gt;</string>
    <string name="lessURL">&lt;a href=\'file:///android_asset/credits.html\'&gt;less...&lt;/a&gt;</string>
    <string name="showEula">License</string>
    <string name="otherProducts">market://search?q=pub:Pavel Ivanov</string>
    <string name="other">More</string>
    <string name="conversation">Conversation</string>
    <string name="respondentKeys">Available public keys</string>
    <string name="noKeys">No available keys. In order to receive public key you should invite other party</string>
    <string name="keyFingerPrint">Key finger-print:&#160;</string>
    <string name="keyType">Key type:&#160;</string>
    <string name="keyReceived">Received at:&#160;</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="protect">Protect</string>
    <string name="unprotect">Clear protection</string>
    <string name="emptyMessage">Empty message or recipient\'s address</string>
    <string name="messageTo">Message to:</string>
    <string name="messageSent">&#160;sent</string>
    <string name="copy">Copy</string>
    <string name="subject">Subject:&#160;</string>
    <string name="messageDetails">Message details</string>
    <string name="invite">Invite</string>
    <string name="balanceZero">Your Dark SMS balance is zero try buy something or send as plain text SMS</string>
    <string name="cantUnprotect">Can\'t clear protection: device was changed or wiped!</string>
    <string name="cantDecrypt">Can\'t decrypt message: device was changed or wiped!</string>
    <string name="dontHavePublicKey">Can\'t decrypt message: missing public key for this party or message was not addressed to you, also probably device was changed or wiped!</string>
    <string name="from">From</string>
    <string name="whom">Whom</string>
    <string name="date">Date</string>
    <string name="body">Message</string>
    <string name="storedBody">Stored as</string>
    <string name="type">Type</string>
    <string name="forwardWarning">Warning! Other party will not be able to read protected or secure message!\n\nDo you want decrypt message before forwarding or send it \"as-is\"?</string>
    <string name="sendAsIs">As is</string>
    <string name="cantSendMessage">Can\'t send message</string>
    <string name="transport">Transport protocol</string>
    <string name="sms">sms</string>
    <string name="mms">mms</string>
    <string name="secretSMSReceived">Secret SMS received</string>
    <string name="invitationSMSReceived">Invitation received</string>
    <string name="acceptSMSReceived">Invite accept received</string>
    <string name="unreadMessages">&#160;- unread messages</string>
    <string name="multimediaMessage">Multimedia message</string>
    <string name="invitationSent">Invitation sent with key:&#160;</string>
    <string name="invitationReceived">Invitation received with key:&#160;</string>
    <string name="invitationDetected">You received invitation to start secure messaging with:\n</string>
    <string name="doYouAcceptInvitation">Do you accept invitation?</string>
    <string name="invitationAccepted">Invitation accepted, sent key:&#160;</string>
    <string name="acceptReceived">Your invite is accepted, received key:&#160;</string>
    <string name="processInvitation">To process invitation you should create new contact in your contact list</string>
    <string name="invitationIgnored">Invitation ignored, key:&#160;</string>
    <string name="inviteWarning1">1. Sending of invitation will be charged by your mobile operator as usual SMS</string>
    <string name="inviteWarning2">2. Other party need to have Dark SMS installed on its device. Link to install Dark SMS will be send with invitation</string>
    <string name="neverShowWarning">Never show</string>
    <string name="inviteWarningTitle">Warning!</string>
    <string name="confirmInvitationTitle">Confirm invitation</string>
    <string name="invitationMessageText">This is invitation to use Dark SMS, Android app for exchanging cipher SMS, to accept invitation you need to install Dark SMS</string>
    <string name="psmMarketUrl">Google Play http://goo.gl/BVXvk</string>
    <string name="invitationCorrupted">Invitation corrupted! Please update application or ask to resend it!</string>
    <string name="receivedAcceptFromUnknownContact">Received invitation accept from unknown contact:&#160;</string>
    <string name="alreadyInvited">Already invited</string>
    <string name="inviteAgain">Invite your party again?</string>
    <string name="invitationAcceptMessageBox">Your invitation was accepted, now you can send secret SMS to&#160;</string>
    <string name="mmsDownload">Download MMS</string>
    <string name="cipherMessage">[Cipher message]</string>
    <string name="protectedMessage">[Protected message]</string>
    <string name="invitationMessage">[Invitation message]</string>
    <string name="inviteAcceptMessage">[Invite accept message]</string>
    <string name="lemonMessage">[Lemon message]</string>
    <string name="plainMessage">[Plain message]</string>
    <string name="invitationTo">Invitation to:&#160;</string>
    <string name="error">Fatal error detected\n</string>
    <string name="inAppUnavailable">In-app billing service is unavailable, please update Android Market/Play to version >= 3.9.16</string>
    <string name="problemInAppSetting">Problem setting up in-app billing:&#160;</string>
    <string name="thanxRefill">Thank you for refilling your secret SMS balance!</string>
    <string name="thanxMonthlySubscription">Thank you for monthly subscription!</string>
    <string name="thanxAnnualSubscription">Thank you for annual subscription!</string>
    <string name="thanxPremium">Thank you for upgrading to premium!</string>
    <string name="thanxComfortPin">Thank you for purchasing comfort PIN!</string>
    <string name="thanxHiddenConversation">Thank you for purchasing hidden conversation!</string>
    <string name="payloadIncorrect">Looks like that someone tries to cheat purchase! Good attempt, but you fail!</string>
    <string name="purchaseCheatDetected">False purchase detected. Good attempt, but you fail!</string>
    <string name="errorConsuming">Error while refilling your balance! Error code:&#160;</string>
    <string name="tankBalance">Your Dark SMS balance is:&#160;</string>
    <string name="pursePremium">You have premium access, so you can send unlimited secret SMS\'!</string>
    <string name="purseMonthly">You have monthly subscription to unlimited secret SMS\' to send</string>
    <string name="purseAnnual">You have annual subscription to unlimited secret SMS\' to send</string>
    <string name="buySKU">Buy</string>
    <string name="buy10messages">Buy 10 messages</string>
    <string name="buy50messages">Buy 50+10 messages</string>
    <string name="buy100messages">Buy 100+50 messages</string>
    <string name="buyPremium">Buy premium</string>
    <string name="buyComfortPin">Buy comfort PIN</string>
    <string name="buyHiddenConversation">Buy option to hide conversation</string>
    <string name="psm_store">Store</string>
    <string name="billing_not_supported_title">Billing not supported</string>
    <string name="billing_not_supported_message">The Market billing service is not available at this time.  You can continue to use this app but you won\'t be able to make purchases.</string>
    <string name="buy">Buy</string>
    <string name="select_item">Select an item</string>
    <string name="publicKeyFingerPrintBasic">Public key finger-print</string>
    <string name="secureByPin">Secure by PIN</string>
    <string name="askPinToRead">Ask PIN code to read secured messages</string>
    <string name="comfortPIN">Comfort PIN</string>
    <string name="askPinOnceScreenUnlocked">Ask PIN once per session</string>
    <string name="messageRingtone">Message ringtone</string>
    <string name="reset">Reset application</string>
    <string name="pressToReset">Press to reset application</string>
    <string name="context_menu_settings">Settings</string>
    <string name="rateApp">Rate application</string>
    <string name="pressToRate">Press to rate in Google Play</string>
    <string name="later">Later</string>
    <string name="eula_title">License</string>
    <string name="pressToReadEULA">Press to processed EULA</string>
    <string name="protectionPrivacyLevelTitle">Protection level</string>
    <string name="messagingPrivacyLevelTitle">Messaging security level</string>
    <string name="edit_buy_simulate" translatable="false">Edit Buy Simulate</string>
    <string name="items_for_sale" translatable="false">Items for sale</string>
    <string name="items_you_own" translatable="false">Items you own</string>
    <string name="recent_transactions">Recent activity</string>
</resources>