<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Genina.com
 * Author Kirill Chokler kchokler@gmail.com
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="4dip"
    android:paddingRight="4dip"
    >

    <TextView
        android:id="@+id/billing_supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/items_for_sale" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Spinner
            android:id="@+id/item_choices"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:prompt="@string/select_item" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout">
        <Button
            android:id="@+id/buy_simulate_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_buy_simulate" />
        <Button
            android:id="@+id/buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/items_you_own" />
    <ListView
        android:id="@+id/owned_items"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:paddingBottom="4dip">
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/recent_transactions" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:bufferType="spannable"
            />
    </ScrollView>
</LinearLayout>
