<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Ivanov Pavel (ivanovpv@gmail.com) and Egor Sarnavsky (egoretss@gmail.com) 2012.
  ~   $Author: ivanovpv $
  ~   $Rev: 246 $
  ~   $LastChangedDate: 2013-06-19 10:58:01 +0400 (Ср, 19 июн 2013) $
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:padding="10sp"
             android:stretchColumns="*">
    <TableRow>
        <TextView
                android:id="@+id/confirmMessage"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:ellipsize="none"
                android:singleLine="false"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_marginBottom="40sp"/>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
            <Button android:id="@+id/yes"
                    android:text="@string/yes"
                    android:layout_marginBottom="10sp"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <Button android:id="@+id/no"
                    android:text="@string/no"
                    android:layout_marginBottom="10sp"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <Button android:id="@+id/later"
                    android:text="@string/later"
                    android:layout_marginBottom="10sp"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>
    </TableRow>
</TableLayout>
